=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.16 (in development)

=over

=item *

Prevent users from submitting 2 different actions at the same time when
editting elements (eg, Add Element + Reorder) before the 1st one has
finished. [Michael Peters]

=item *

Fixed element editor bug where re-ordering and adding elements at
the same time could result in weirdness depending on the element's
classes. [Michael Peters]

=item *

C<Krang::ElementClass::TopLevel::publish_frontend_app_template()> now has
an additional (optional) C<template> parameter that can be used in place
of C<filename> if you already have a template to pass. [Michael Peters]

=item *

Fixing bug where messages during publish were getting lost [Michael
Peters]

=item * 

Allowed multiple schedulers to run without processing the same
schedules. [Bodo Schulze]

=item *

Added 4 flags to L<Krang::ElementClass::CategoryLink> implementing a
'conditional publishing behavor' for stories having CategoryLinks.
If this behavior is set via any 4 flags, then this story can become a
publish dependency of other stories/media in those linked categories.
[Bodo Schulze]

=back

=head2 3.15 - November, 16 2011

=over

=item *

Publishing through the UI no longer locks the session while the publishing
is happening. [Michael Peters]

=item *

Adding C<--no-ssl-symlinks> option to Krang upgrade to skip rebuilding
the SSL cert symlinks. [Michael Peters]

=item *

Added a new C<session_id> method to L<Krang::Session> to make it really
easy to determine the current session's ID. [Michael Peters]

=item *

Fixed story_find help text. [Bodo Schulze]

=item *

Added F<docs/feature_history> to document new features and functional
enhancements from a user perspective. [Bodo Schulze]

=item *

Put back session locking because without it there are race conditions
when we deal with multiple windows and nested data structures in the
sessions. [Michael Peters]

=item *
